--- a/frontEnd/ISOQuality/ISOQuality/assets/style.css
+++ b/frontEnd/ISOQuality/ISOQuality/assets/style.css
@@ -1,126 +1,278 @@
 body {
-    font-family: sans-serif;
-  }
-  
-  #recuadros {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 400px;
-    background-color: lightgray;
-  }
-  
-  .figure-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-  }
-  
-  .figure-row {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
-  }
-  
-  .figure-col {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 10px;
-    flex-basis: 0;
-    flex-grow: 1;
-  }
-  
-  .rectangle {
-    width: 200px;
-    height: 100px;
-    background-color: blue;
-  }
-  
-  .square {
-    width: 100px;
-    height: 100px;
-    background-color: orange;
-  }
-  
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
-}
-/*Cards*/
-.container-card{
-	width: 100%;
-	display: flex;
-	max-width: 1100px;
-	margin: auto;
-}
-.title-cards{
-	width: 100%;
-	max-width: 1080px;
-	margin: auto;
-	padding: 20px;
-	margin-top: 20px;
-	text-align: center;
-	color: #7a7a7a;
-}
-.card{
-	width: 100%;
-	margin: 20px;
-	border-radius: 6px;
-	overflow: hidden;
-	background:#fff;
-	box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
-	transition: all 400ms ease-out;
-	cursor: default;
-}
-.card:hover{
-	box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
-	transform: translateY(-3%);
-}
-.card img{
-	width: 100%;
-	height: 210px;
-}
-.card .contenido-card{
-	padding: 15px;
-	text-align: center;
-}
-.card .contenido-card h3{
-	margin-bottom: 15px;
-	color: #7a7a7a;
-}
-.card .contenido-card p{
-	line-height: 1.8;
-	color: #6a6a6a;
-	font-size: 14px;
-	margin-bottom: 5px;
-}
-.card .contenido-card a{
-	display: inline-block;
-	padding: 10px;
-	margin-top: 10px;
-	text-decoration: none;
-	color: #2fb4cc;
-	border: 1px solid #2fb4cc;
-	border-radius: 4px;
-	transition: all 400ms ease;
-	margin-bottom: 5px;
-}
-.card .contenido-card a:hover{
-	background: #2fb4cc;
-	color: #fff;
+  font-family: sans-serif;
 }
 
-@media only screen and (min-width:320px) and (max-width:768px){
-	.container-card{
-		flex-wrap: wrap;
-	}
-	.card{
-		margin: 15px;
-	}
+/* Galeria Destacados */
+
+.hover-effect {
+  transition: transform 0.3s ease;
+}
+
+.hover-effect:hover {
+  transform: scale(1.05);
+}
+
+.destacados {
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+  display: flex;
+}
+
+.col-md-4 {
+  padding-right: 5.5px !important;
+  padding-left: 5.5px !important;
+  flex-grow: 1;
+}
+
+.slide {
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+  margin-bottom: -0.5%;
+}
+
+.slidefijo {
+  display: flex;
+}
+
+.banner2 {
+  margin-top: 3%;
+}
+
+.banner5 {
+  margin-top: 2%;
+}
+
+#index .image-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+#index .image-container img {
+  transition: transform 0.2s ease;
+}
+
+.overlap-container {
+  position: relative;
+  overflow: hidden;
+  height: 100%;
+
+}
+
+.overlap-container img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+}
+
+/*Cards*/
+.container-card {
+  width: 100%;
+  display: flex;
+  max-width: 1100px;
+  margin: auto;
+}
+
+.title-cards {
+  width: 100%;
+  max-width: 1080px;
+  margin: auto;
+  padding: 20px;
+  margin-top: 20px;
+  text-align: center;
+  color: #7a7a7a;
+}
+
+.card {
+  width: 100%;
+  margin: 20px;
+  border-radius: 6px;
+  overflow: hidden;
+  background: #fff;
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
+  transition: all 400ms ease-out;
+  cursor: default;
+}
+
+.card:hover {
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
+  transform: translateY(-3%);
+}
+
+.card img {
+  width: 100%;
+  height: 210px;
+}
+
+.card .contenido-card {
+  padding: 15px;
+  text-align: center;
+}
+
+.card .contenido-card h3 {
+  margin-bottom: 15px;
+  color: #7a7a7a;
+}
+
+.card .contenido-card p {
+  line-height: 1.8;
+  color: #6a6a6a;
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+.card .contenido-card a {
+  display: inline-block;
+  padding: 10px;
+  margin-top: 10px;
+  text-decoration: none;
+  color: #2fb4cc;
+  border: 1px solid #2fb4cc;
+  border-radius: 4px;
+  transition: all 400ms ease;
+  margin-bottom: 5px;
+}
+
+.card .contenido-card a:hover {
+  background: #2fb4cc;
+  color: #fff;
+}
+/*
+.card-semilla {
+  background-image: url('assets/img/seed.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.card-abeja {
+  background-image: url('assets/img/abeja.jpeg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+*/
+
+/* Estilos personalizados para el formulario */
+
+.form-container {
+  max-width: 600px;
+  margin: 50px auto;
+  padding: 20px;
+  background-color: #f8f8f8;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-group label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.form-group input,
+.form-group textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+.form-group textarea {
+  resize: vertical;
+  height: 100px;
+}
+
+.form-group button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.form-group button:hover {
+  background-color: #45a049;
+}
+
+/* Estilos para las imágenes */
+
+
+
+#logoS {
+  width: 90px;
+  height: 90px;
+}
+
+#logoA {
+  width: 90px;
+  height: 90px;
+}
+
+.image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin-top: 70px;
+}
+
+#ventana .image-container  {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 100px;
+}
+
+#ventana .image-container img  {
+
+  width: 80%;
+  border: 1px solid #ddd;
+  border-radius: 200px;
+}
+
+/* Estilos personalizados para la página de capacitaciones y eventos */
+.service-container {
+  max-width: 800px;
+  margin: 50px auto;
+}
+
+.service-title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.service-description {
+  margin-bottom: 20px;
+}
+
+.service-image {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+
+/* Media Queries */
+
+@media only screen and (min-width:320px) and (max-width:768px) {
+  .container-card {
+    flex-wrap: wrap;
+  }
+
+  .card {
+    margin: 15px;
+  }
 }
