--- a/frontEnd/ISOQuality/ISOQuality/assets/style.css
+++ b/frontEnd/ISOQuality/ISOQuality/assets/style.css
@@ -15,6 +15,15 @@ body {
   font-weight:bold;
 }
 
+.font-style-italic {
+  font-style: italic;
+}
+
+.font-style-underline{
+  text-decoration: underline;
+  
+}
+
 /* Animacion fade in */
 .fade-in {
   animation: fadeIn 2s ease-in-out;
